k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roast-co-service
  namespace: dev

spec:
  type: ClusterIP
  selector:
    app: roast-co-app
  ports:
    - port: 80
    - targetPort: 5000
