k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roast-co-dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:215229808174:certificate/<replace-me after aws acm list-certificates>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
spec:
  ingressClassName: alb
  rules:
    - host: roast-and-co.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: roast-co-service
              port:
                number: 80
